// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Space rtl render component should be rendered correctly in RTL direction 1`] = `null`;

exports[`Space should render correct with children 1`] = `
<div
  class="ezd-space ezd-space-horizontal ezd-space-align-center"
>
  <div
    class="ezd-space-item"
    style="margin-right:8px"
  >
    text1
  </div>
  <div
    class="ezd-space-item"
    style="margin-right:8px"
  >
    <span>
      text1
    </span>
  </div>
  <div
    class="ezd-space-item"
  >
    text3
  </div>
</div>
`;

exports[`Space should render width ConfigProvider 1`] = `
Array [
  <div
    class="ezd-space ezd-space-horizontal ezd-space-align-center"
  >
    <div
      class="ezd-space-item"
      style="margin-right:24px"
    >
      <span>
        1
      </span>
    </div>
    <div
      class="ezd-space-item"
    >
      <span>
        2
      </span>
    </div>
  </div>,
  <div
    class="ezd-space ezd-space-horizontal ezd-space-align-center"
  >
    <div
      class="ezd-space-item"
      style="margin-right:16px"
    >
      <span>
        1
      </span>
    </div>
    <div
      class="ezd-space-item"
    >
      <span>
        2
      </span>
    </div>
  </div>,
  <div
    class="ezd-space ezd-space-horizontal ezd-space-align-center"
  >
    <div
      class="ezd-space-item"
      style="margin-right:24px"
    >
      <span>
        1
      </span>
    </div>
    <div
      class="ezd-space-item"
    >
      <span>
        2
      </span>
    </div>
  </div>,
]
`;

exports[`Space should render width rtl 1`] = `
Array [
  <div
    class="ezd-space ezd-space-horizontal ezd-space-rtl ezd-space-align-center"
  >
    <div
      class="ezd-space-item"
      style="margin-left:8px"
    >
      <span>
        1
      </span>
    </div>
    <div
      class="ezd-space-item"
    >
      <span>
        2
      </span>
    </div>
  </div>,
  <div
    class="ezd-space ezd-space-horizontal ezd-space-rtl ezd-space-align-center"
  >
    <div
      class="ezd-space-item"
      style="margin-left:16px"
    >
      <span>
        1
      </span>
    </div>
    <div
      class="ezd-space-item"
    >
      <span>
        2
      </span>
    </div>
  </div>,
  <div
    class="ezd-space ezd-space-horizontal ezd-space-rtl ezd-space-align-center"
  >
    <div
      class="ezd-space-item"
      style="margin-left:24px"
    >
      <span>
        1
      </span>
    </div>
    <div
      class="ezd-space-item"
    >
      <span>
        2
      </span>
    </div>
  </div>,
]
`;

exports[`Space split 1`] = `
<div
  class="ezd-space ezd-space-horizontal ezd-space-align-center"
>
  <div
    class="ezd-space-item"
    style="margin-right:4px"
  >
    text1
  </div>
  <span
    class="ezd-space-item-split"
    style="margin-right:4px"
  >
    -
  </span>
  <div
    class="ezd-space-item"
    style="margin-right:4px"
  >
    <span>
      text1
    </span>
  </div>
  <span
    class="ezd-space-item-split"
    style="margin-right:4px"
  >
    -
  </span>
  <div
    class="ezd-space-item"
  >
    text3
  </div>
</div>
`;
